SERVER-72400 Shard merge recipient doesn't need explicit reload views for system.views collections during import phase.