jstests/replsets/tenant_migration_timeseries_collections.js
@@ -22,10 +22,11 @@ const donorPrimary = tenantMigrationTest.getDonorPrimary();
 
 const tenantId = ObjectId().str;
 const tsDB = tenantMigrationTest.tenantDB(tenantId, "tsDB");
+const collName = "tsColl";
 const donorTSDB = donorPrimary.getDB(tsDB);
-assert.commandWorked(donorTSDB.createCollection("tsColl", {timeseries: {timeField: "time"}}));
+assert.commandWorked(donorTSDB.createCollection(collName, {timeseries: {timeField: "time"}}));
 assert.commandWorked(donorTSDB.runCommand(
-    {insert: "tsColl", documents: [{_id: 1, time: ISODate()}, {_id: 2, time: ISODate()}]}));
+    {insert: collName, documents: [{_id: 1, time: ISODate()}, {_id: 2, time: ISODate()}]}));
 
 const migrationId = UUID();
 const migrationOpts = {
@@ -34,6 +35,21 @@ const migrationOpts = {
 };
 
 TenantMigrationTest.assertCommitted(tenantMigrationTest.runMigration(migrationOpts));
+
+const donorPrimaryCountDocumentsResult = donorTSDB[collName].countDocuments({});
+const donorPrimaryCountResult = donorTSDB[collName].count();
+
+// Creating a timeseries collection internally creates a view. Reading from timeseries collection
+// works only if the view associated with the timeseries is present. So, this step ensures both the
+// timeseries collection and the view are copied correctly to recipient.
+tenantMigrationTest.getRecipientRst().nodes.forEach(node => {
+    jsTestLog(`Checking ${tsDB}.${collName} on ${node}`);
+    // Use "countDocuments" to check actual docs, "count" to check sizeStorer data.
+    assert.eq(donorPrimaryCountDocumentsResult,
+              node.getDB(tsDB)[collName].countDocuments({}),
+              "countDocuments");
+    assert.eq(donorPrimaryCountResult, node.getDB(tsDB)[collName].count(), "count");
+});
 
 tenantMigrationTest.stop();
 })();
